--- a/spring-boot-journal/pom.xml
+++ b/spring-boot-journal/pom.xml
@@ -78,8 +78,36 @@
 			<version>4.12</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.esotericsoftware</groupId>
+			<artifactId>kryo</artifactId>
+			<version>4.0.2</version>
+		</dependency>
 
-	</dependencies>
+		<dependency>
+			<groupId>com.taobao.wireless</groupId>
+			<artifactId>agoo-message</artifactId>
+			<version>2.2.5.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>hessian</groupId>
+			<artifactId>hessian</artifactId>
+			<version>3.1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.ajdk</groupId>
+			<artifactId>ajdk-api</artifactId>
+			<version>8.8.13-0-0</version>
+		</dependency>
+        <dependency>
+            <groupId>com.googlecode.aviator</groupId>
+            <artifactId>aviator</artifactId>
+            <version>5.0.0</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
